# hasher

./: README.md  bld.sh  bld_cc.sh  clean.sh  config.sh  initial_bld.sh  initial_bld_cc.sh  run_tests.sh
src/: CMakeLists.txt
src/hasher/: CMakeLists.txt  main.c  util.c
src/hasher/include/: main.h  util.h
src/magic/: CMakeLists.txt  magic.c  util.c
src/magic/include/: magic.h  util.h
src/tests/: CMakeLists.txt  test_hash.c  tests.c
src/tests/include/: test_hash.h  tests.h
